# aoc2021

./: aoc2021.cabal
app/: day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs
