cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

author:             Nathan van Doorn
maintainer:         nvd1234@gmail.com

extra-source-files: CHANGELOG.md, data/*

executable day1
    main-is:          day1.hs
    build-depends:    base
                    , bytestring
                    , conduit
    hs-source-dirs:   app
    default-language: Haskell2010
