cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

author:             Nathan van Doorn
maintainer:         nvd1234@gmail.com

extra-source-files: CHANGELOG.md, data/*

executable day1
    main-is:          day1.hs
    build-depends:    base
                    , bytestring
                    , conduit
    hs-source-dirs:   app
    default-language: Haskell2010

executable day2
    main-is:          day2.hs
    build-depends:    base
                    , attoparsec
                    , bytestring
                    , conduit
                    , conduit-extra
    hs-source-dirs:   app
    default-language: Haskell2010

executable day3
    main-is:          day3.hs
    build-depends:    base
                    , regex-applicative
    hs-source-dirs:   app
    default-language: Haskell2010

executable day4
    main-is:          day4.hs
    build-depends:    base
                    , attoparsec
                    , bytestring
                    , conduit
                    , conduit-extra
    hs-source-dirs:   app
    default-language: Haskell2010

executable day5
    main-is:          day5.hs
    build-depends:    base
                    , containers
                    , megaparsec
    hs-source-dirs:   app
    default-language: Haskell2010

executable day6
    main-is:          day6.hs
    build-depends:    base
                    , linear
    hs-source-dirs:   app
    default-language: Haskell2010

executable day7
    main-is:          day7.hs
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010

executable day8
    main-is:          day8.hs
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010

executable day9
    main-is:          day9.hs
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010

executable day10
    main-is:          day10.hs
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010

executable day11
    main-is:          day11.hs
    build-depends:    base
                    , constraints
                    , finite-typelits
                    , vector-sized
    hs-source-dirs:   app
    default-language: Haskell2010
